{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "726e86e5-bd13-489f-90e2-cb6fd8b7653c",
            "actions": [
                {
                    "name": "Two Handed Manipulation",
                    "type": "Button",
                    "id": "81fcb387-af9c-4f2f-85e7-d7157f611672",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GrabLeftHand",
                    "type": "Button",
                    "id": "711b34c5-c506-4e10-826b-6f76df6a3a49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GrabRightHand",
                    "type": "Button",
                    "id": "4d1b25f7-a317-43bf-bc7d-b1ade1b6e4ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Two grips pressed",
                    "id": "507d68e7-1ad2-4c4e-9b1c-66ff995fb297",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Two Handed Manipulation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "c5f0adbc-6dc8-4355-9aef-fa13ccf52fb9",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Two Handed Manipulation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "36581aa0-4edc-4bf5-bc32-4bbd176299ca",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Two Handed Manipulation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "32bf7708-3edc-48c7-be9f-0f32bafd750c",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabLeftHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8b3592e-de5b-4ce8-8f7b-6259042ffaf4",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabRightHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}